# MicroFPGA-compatibility

./: .gitignore  .gitmodules  MicroMojo.mojo  README.md  README_v1.md
Alchitry_projects/Mojo_v1/: Mojo.alp
Alchitry_projects/Mojo_v1/source/: servo_standard.luc  servo_stop.luc
Alchitry_projects/Mojo_v3/: Mojo.alp
Alchitry_projects/Mojo_v3/source/: laser_trigger.luc  mojo_top.luc  servo_standard.luc
DeviceAdapter/: Mojo.cpp  Mojo.h
Firmware/: MicroMojo2.mojo
Firmware/constraint/: user.ucf
Firmware/source/: cam_synchro.luc  lasertrigger.luc  mojo_top.luc  servo_stop.luc
Firmware_alchitry/Mojo/: Mojo.alp
Firmware_alchitry/Mojo/source/: lasertrigger.luc  mojo_top.luc
Firmware_alchitry/Mojo_v1/: Mojo.alp
Firmware_alchitry/Mojo_v1/constraint/: user.ucf
Firmware_alchitry/Mojo_v1/source/: mojo_top.luc
Firmware_alchitry/Mojo_v3/: Mojo.alp
Firmware_alchitry/Mojo_v3/constraint/: user.ucf
Firmware_alchitry/Mojo_v3/source/: analogreader.luc  mojo_top.luc  servo_stop.luc
Micro-manager/DeviceAdapter/: MicroMojo.cpp  MicroMojo.h  Mojo.cpp  Mojo.h  Mojo.vcxproj
Micro-manager/DeviceAdapter_v1/: Makefile.am  MicroMojo.cpp  MicroMojo.h  MicroMojo.vcxproj
constraint/: user.ucf
source/: cam_synchro.luc  lasertrigger.luc  mojo_top.luc
tutorials/: change_servo_signal.md
