AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_MicroMojo.la
libmmgr_dal_MicroMojo_la_SOURCES = MicroMojo.cpp MicroMojo.h \
   ../../MMDevice/MMDevice.h ../../MMDevice/DeviceBase.h
libmmgr_dal_MicroMojo_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_MicroMojo_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)
